--- a/_posts/2022-01-06-essay.md
+++ b/_posts/2022-01-06-essay.md
@@ -1,7 +1,9 @@
 ---
 layout: post
 title: '为柑痛心'
+subtitle: '偶尔还是会怀疑一些不知其自己是否明了的人生志向。'
 date: 2022-01-06
+categories: essay
 author: Simon
 cover: 'https://cdn.rspstudio.cn/image/blog/20220106.jpg'
 tags: essay
