Update and rename 2021-12-30-essay.md to 2021-12-30-writing.md

--- a/_posts/2021-12-30-writing.md
+++ b/_posts/2021-12-30-writing.md
@@ -3,10 +3,10 @@ layout: post
 title: '致读者言：一百一十年末'
 subtitle: '当然，新新世界的人们是时常追捧着未来期盼，并勤于为此指明方向的。'
 date: 2021-12-30
-categories: essay
+categories: writing
 author: Simon
 cover: 'https://cdn.rspstudio.cn/image/blog/20211230.jpg'
-tags: essay 现代性
+tags: writing 现代性
 ---
 
 光阴如水，春秋易近。法乎今日，不免于有两种人，其一善长总结，一年之间收获颇丰，是值得称道而如珠细数的；其二既欲有感，却因感受之贫乏难以下笔。
