Update and rename 2022-01-06-essay.md to 2022-01-06-writing.md

--- a/_posts/2022-01-06-writing.md
+++ b/_posts/2022-01-06-writing.md
@@ -3,10 +3,10 @@ layout: post
 title: '为柑痛心'
 subtitle: '偶尔还是会怀疑一些不知其自己是否明了的人生志向。'
 date: 2022-01-06
-categories: essay
+categories: writing
 author: Simon
 cover: 'https://cdn.rspstudio.cn/image/blog/20220106.jpg'
-tags: essay
+tags: writing
 ---
 
 偶尔还是会怀疑一些不知其自己是否明了的人生志向。虽然经常抱怨现今青年没有志业的多，可若是不自觉的认同或是进入了一代人对于后生如自己一般的愿景，或许还是当属于“未经审视的人生”的。这虽然是对此的求全责备。
