Update and rename 2022-01-04-snip.md to 2022-01-04-essay.md

--- a/_posts/2022-01-04-essay.md
+++ b/_posts/2022-01-04-essay.md
@@ -3,10 +3,10 @@ layout: post
 title: '从理想主义到经验主义（治学四谈）'
 subtitle: '数年来，每当我困顿、迷惘、看不见方向，陈敏之先生掷地有声的文字，时仍在我脑中回响。'
 date: 2022-01-04
-categories: snip
+categories: essay
 author: Simon
 cover: 'https://cdn.rspstudio.cn/image/blog/20220104.jpg'
-tags: snip 思维方式
+tags: essay 思维方式
 ---
 
 # 目录
