Update and rename 2022-01-22-snip.md to 2022-01-22-essay.md

--- a/_posts/2022-01-22-essay.md
+++ b/_posts/2022-01-22-essay.md
@@ -3,10 +3,10 @@ layout: post
 title: '复杂性科学论说（Dec 21-Jan 22）'
 subtitle: '我们等待康德，不如站出人群，妄称自己为康德。'
 date: 2022-01-22
-categories: snip
+categories: essay
 author: Simon
 cover: 'https://cdn.rspstudio.cn/image/blog/20220122.jpg'
-tags: snip 复杂性
+tags: essay 复杂性
 ---
 
 # 目录
