Update and rename 2022-03-02-snip.md to 2022-03-02-essay.md

--- a/_posts/2022-03-02-essay.md
+++ b/_posts/2022-03-02-essay.md
@@ -3,10 +3,10 @@ layout: post
 title: '虚拟、进化与人（Pandemic两记）'
 subtitle: '只要基因编辑技术出现，我们就无法阻止它的使用。'
 date: 2022-03-02
-categories: snip
+categories: essay
 author: Simon
 cover: 'https://cdn.rspstudio.cn/image/blog/20220302.jpg'
-tags: snip Pandemic 虚拟世界 复杂性
+tags: essay Pandemic 虚拟世界 复杂性
 ---
 
 # 记一 · 虚拟、进化与人
